# kraken_mar_engine

./: .gitignore  CMakeLists.txt  README.md
src/: config.h  data_structures.h  feature_calculator.cpp  feature_calculator.h  main.cpp  questdb_connector.cpp  questdb_connector.h
